preparando a aplicação para o deploy no heroku

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "start": "node src/index.js"
   },
   "dependencies": {
     "express": "^4.18.1",
