--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "node src/index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "nodemon": "^2.0.19"
   },
