--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "repository": "https://github.com/mazzillio/App-Masters.git",
   "author": "mazzillio <mateca500@gmail.com>",
   "license": "MIT",
-  "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js",
+    "dev": "ts-node-dev --transpile-only src/index.ts",
+    "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js" 
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -17,7 +17,22 @@
     "nodemon": "^2.0.19"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
+    "eslint": "^8.21.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.4.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import-helpers": "^1.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.1.3",
-    "supertest": "^6.2.4"
+    "prettier": "^2.7.1",
+    "supertest": "^6.2.4",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.4"
   }
 }
