Transpilando os testes para TS

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "scripts": {
     "dev": "ts-node-dev --transpile-only src/index.ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "start": "node src/index.js" 
+    "test": "jest",
+    "build":"tsc",
+    "start": "node src/index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -17,8 +18,12 @@
     "nodemon": "^2.0.19"
   },
   "devDependencies": {
+    "@swc/core": "^1.2.223",
+    "@swc/jest": "^0.2.22",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.6",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "eslint": "^8.21.0",
