--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   "scripts": {
     "dev": "ts-node-dev --transpile-only src/index.ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
-    "test": "jest",
-    "build":"tsc",
+    "test": "jest --timeout=10000",
+    "build": "tsc",
     "start": "node build/src/index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@swc/core": "^1.2.223",
