--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "node build/src/index.js"
   },
   "dependencies": {
+    "@prisma/client": "^4.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "nodemon": "^2.0.19",
@@ -36,6 +37,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.1.3",
     "prettier": "^2.7.1",
+    "prisma": "^4.1.1",
     "supertest": "^6.2.4",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
